Closed Bug 1603041 Opened 6 years ago Closed 6 years ago

Crash in [@ AllocInfo::Get<T> | moz_malloc_size_of | mozilla::webgl::ShaderValidatorResults::SizeOfIncludingThis]

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

x86_64
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox72 --- wontfix
firefox73 --- wontfix
firefox74 --- fixed

People

(Reporter: gsvelto, Assigned: mikokm)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1468541 +++

This bug is for crash report bp-a7cb623e-cd0e-41e7-8301-5708b0191209.

Top 10 frames of crashing thread:

0 mozglue.dll AllocInfo::Get<1> memory/build/mozjemalloc.cpp:3047
1 mozglue.dll moz_malloc_size_of memory/mozalloc/mozalloc.cpp:128
2 xul.dll unsigned __int64 mozilla::webgl::ShaderValidatorResults::SizeOfIncludingThis dom/canvas/WebGLShaderValidator.cpp:485
3 xul.dll mozilla::WebGLShader::SizeOfIncludingThis dom/canvas/WebGLShader.cpp:302
4 xul.dll static __int64 mozilla::WebGLMemoryTracker::GetShaderSize dom/canvas/WebGLMemoryTracker.cpp:121
5 xul.dll nsresult mozilla::WebGLMemoryTracker::CollectReports dom/canvas/WebGLMemoryTracker.cpp:61
6 xul.dll nsresult mozilla::detail::RunnableFunction<`lambda at z:/task_1574352431/build/src/xpcom/base/nsMemoryReporterManager.cpp:1863:7'>::Run xpcom/threads/nsThreadUtils.h:564
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
8 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
9 xul.dll nsThread::Shutdown xpcom/threads/nsThread.cpp:900

This seems to have started with buildid 20190621214126 during the 69.0 cycle.

Assignee: nobody → mikokm

I spotted a possible problem with the order of resource destruction and removing WebGLContext from WebGLMemoryTracker. This patch might not fix this bug.

Status: NEW → ASSIGNED
Component: Graphics → Canvas: WebGL
Keywords: leave-open
Priority: -- → P3
Attachment #9115226 - Attachment description: Bug 1603041 - Add and remove WebGLContext to/from WebGLMemoryTracker in more logical place r=jgilbert → Bug 1603041 - Remove WebGLContext from WebGLMemoryTracker before destroying resources r=jgilbert
Pushed by mikokm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/0d3256a2c780 Remove WebGLContext from WebGLMemoryTracker before destroying resources r=jgilbert
Assignee: mikokm → nobody
Status: ASSIGNED → NEW

Jeff, do you think there is something to be done still, or can this bug be closed?

Flags: needinfo?(jgilbert)

Comment on attachment 9115226 [details]
Bug 1603041 - Remove WebGLContext from WebGLMemoryTracker before destroying resources r=jgilbert

This looks risk-free enough to uplift.

Flags: needinfo?(jgilbert)

Actually let's just let this ride.

Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Assignee: nobody → mikokm
Keywords: leave-open
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: