Bug 1603041 - Remove WebGLContext from WebGLMemoryTracker before destroying resources r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D56758